# agent-eval-harness

./: .coverage  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  plan.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  codeql.yml
agent_eval/: __init__.py  cli.py
agent_eval/adapters/: __init__.py  anthropic.py  base.py  crewai.py  langchain.py  openai_agents.py  pydantic_ai.py
agent_eval/dashboard/: server.py
agent_eval/data/: pricing.toml
agent_eval/metrics/: __init__.py  cost.py  hallucination.py  latency.py  tool_success.py
agent_eval/tracer/: collector.py  decorators.py  schema.py  writer.py
docs/: 01_Project_Charter.docx  02_Product_Requirements_Document.docx  03_Technical_Architecture_Document.docx  04_Contributing_Guide.docx  05_RFC_Template_and_RFC-0001.docx  architecture.md
examples/: anthropic_example.py  crewai_example.py  langchain_example.py  mock_llm.py  openai_agents_example.py  pydantic_ai_example.py
rfcs/: 0000-template.md  0001-core-trace-schema.md
tests/: conftest.py
tests/integration/: test_cli_e2e.py  test_metrics_pipeline.py  test_trace_e2e.py
tests/unit/: test_adapter_anthropic.py  test_adapter_crewai.py  test_adapter_langchain.py  test_adapter_openai.py  test_adapter_pydantic_ai.py  test_cli.py  test_collector.py  test_cost.py  test_dashboard_server.py  test_examples_smoke.py  test_hallucination_llm_judge.py  test_hallucination_schema.py  test_hallucination_semantic.py  test_latency.py  test_schema.py  (+3 more)
(+1 files in other folders)
